sidebar misalignment fix

--- a/user/style.css
+++ b/user/style.css
@@ -36,7 +36,6 @@ main {
   display: flex;
   align-items: center;
   position: relative;
-  /* border-radius: 5px; */
 }
 
 .sidebar input {
@@ -49,7 +48,6 @@ main {
   border: 1px solid black;
   background-color: #778DA9;
   margin-right: 10px;
-  margin-top: 10px;
 }
 
 .sidebar label {
